# cpp-boilerplate

./: README.md
example/: .gitignore  CMakeLists.txt  Jenkinsfile  Makefile  README.md  docker-compose.yml  version.h.in
example/dockerfiles/develop/: Dockerfile
example/src/example/cpp/example/: main.cc
example/src/example/headers/example/: example.h  main.h
example/src/exampleTest/cpp/: main.cc
example/src/main/cpp/: main.cc
languages/ja/: README.md
